--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # `jekyll serve`. If you change this file, please restart the server process.
 
 # Site Settings
-title                    : "Xu-Sheng Liu(刘旭昇)"
+title                    : "Xu-Sheng Liu"
 description              : "主要研究方向：基于糖酵解代谢重编程的肿瘤分子标志物识别与精准诊疗策略研究。"
 repository               : "LXSKING/LXSKING.github.io"
 google_scholar_stats_use_cdn : true
@@ -27,9 +27,9 @@ author:
   location         : "Shiyan, China"
   employer         :
   pubmed           : 
-  googlescholar    : "https://scholar.google.com/citations?user=YOUR_GOOGLE_SCHOLAR_ID"
+  googlescholar    : "https://scholar.google.com/citations?user=VnJ0pkYAAAAJ"
   email            : "lxsking@hbmu.edu.cn"
-  researchgate     :  # e.g., "https://www.researchgate.net/profile/yourprofile"
+  researchgate     : "https://www.researchgate.net/profile/Xu-Sheng-Liu-3"
   uri              :
   bitbucket        :
   codepen          :
