--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,21 +1,29 @@
 # main links links
 main:
-  - title: "About Me"
-    url: "/#about-me"
+  - title: "简介"
+    url: "/#简介"
 
   - title: "自然科学项目"
     url: "/#-自然科学项目"
 
-  - title: "Publications"
-    url: "/#-publications"
+  - title: "代表性成果"
+    url: "/#-代表性成果"
+    
+  - title: "教研项目"
+    url: "/#-教研项目"
 
-  - title: "Honors and Awards"
-    url: "/#-honors-and-awards"
+  - title: "专利"
+    url: "/#-专利"
+    
+  - title: "竞赛获奖"
+    url: "/#-竞赛获奖"
+    
+  - title: "学术任职"
+    url: "/#-学术任职"
+    
+  - title: "教育经历"
+    url: "/#-教育经历"
 
-  - title: "Educations"
-    url: "/#-educations"
 
-  - title: "Invited Talks"
-    url: "/#-invited-talks"
 
 
