--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,7 +7,7 @@ main:
     url: "/#-自然科学项目"
 
   - title: "代表性成果"
-    url: "/#-代表性成果"
+    url: "/#代表性成果"
     
   - title: "教研项目"
     url: "/#-教研项目"
